Bug 432580 - Default duration in preferences can be set to a non-working value
Summary: Default duration in preferences can be set to a non-working value
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Video Effects & Transitions (other bugs)
Version First Reported In: 20.12.1
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-06 17:19 UTC by Larsen
Modified: 2021-03-17 12:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
fritzibaby: Brainstorm+


Attachments
Wipe_too-long.png (36.59 KB, image/png)
2021-02-13 18:47 UTC, emohr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Larsen 2021-02-06 17:19:28 UTC
STEPS TO REPRODUCE
1. Configure Kdenlive > Misc > Default duration "Transitions"
2. Enter "00:00:1:00"
3. Save

OBSERVED RESULT
Using the purple dot in the lower left corner of a clip (duration 13 seconds) to add a wipe transition from the previous clip on another track doesn't work anymore (nothing happens).

It's not until I correct the value to "00:00:01:00" that adding a wipe does work again.

EXPECTED RESULT
The value "00:00:1:00" should work as is. To display it properly, automatically be changed to "00:00:01:00".


SOFTWARE/OS VERSIONS
Windows: 10, 20H2
Comment 1 emohr 2021-02-13 18:47:58 UTC
Created attachment 135662 [details]
Wipe_too-long.png

Confirmed. Project 1080p50fps. Overlap a clip 1sec and 25 frame the transition get 1sec 25 frame instead of 1sec.
Comment 2 Julius Künzel 2021-03-17 12:08:01 UTC
Git commit 431181a80c236d8a32204e965586b46ae0ed8600 by Julius Künzel.
Committed on 17/03/2021 at 12:06.
Pushed by jlskuz into branch 'master'.

Validate timecode in settings

M  +19   -0    src/dialogs/kdenlivesettingsdialog.cpp

https://invent.kde.org/multimedia/kdenlive/commit/431181a80c236d8a32204e965586b46ae0ed8600
Comment 3 Julius Künzel 2021-03-17 12:09:11 UTC
Git commit 0a7b17ab8bb6deaee3e32a7026a1669bda8a3a9e by Julius Künzel.
Committed on 17/03/2021 at 12:08.
Pushed by jlskuz into branch 'release/21.04'.

Validate timecode in settings
(cherry picked from commit 431181a80c236d8a32204e965586b46ae0ed8600)

M  +19   -0    src/dialogs/kdenlivesettingsdialog.cpp

https://invent.kde.org/multimedia/kdenlive/commit/0a7b17ab8bb6deaee3e32a7026a1669bda8a3a9e
Comment 4 Larsen 2021-03-17 12:59:59 UTC
Thx!