Validate timecode in settings

BUG: 432580